start over project

--- a/myportfolio/css/foundation.css
+++ b/myportfolio/css/foundation.css
@@ -227,7 +227,7 @@ svg:not(:root) {
 /* Forms
        ========================================================================== */
 /**
-     * 1. Change the font styles in all browsers (opinionated).
+     * 1. Change the font css in all browsers (opinionated).
      * 2. Remove the margin in Firefox and Safari.
      */
 button,
@@ -279,7 +279,7 @@ button,
        * Remove the inner border and padding in Firefox.
        */
   /**
-       * Restore the focus styles unset by the previous rule.
+       * Restore the focus css unset by the previous rule.
        */ }
   button::-moz-focus-inner,
   [type="button"]::-moz-focus-inner,
