--- a/myportfolio/css/styles.css
+++ b/myportfolio/css/styles.css
@@ -137,6 +137,9 @@
   .nav_overlay.show_menu {
     top: 0; }
 
+.no-scroll {
+  overflow: hidden; }
+
 .header_image_container {
   width: 100%;
   height: 100vh;
@@ -177,6 +180,20 @@
     bottom: 0;
     transform: translateX(-50%); }
 
-.about_container section {
+.about_container {
   margin: 0;
-  text-align: center; }
+  padding: 80px 10px 60px 10px; }
+  .about_container section {
+    margin: 0;
+    text-align: left; }
+  .about_container .about_title {
+    padding-bottom: 60px; }
+    .about_container .about_title h3 {
+      font-family: "Raleway", sans-serif;
+      font-size: 1.125rem;
+      font-weight: 700;
+      color: #000; }
+  .about_container .about_text p {
+    font-family: "Times New Roman", serif;
+    font-size: 1rem;
+    color: #000; }
