set up development section

--- a/myportfolio/scss/_variables.scss
+++ b/myportfolio/scss/_variables.scss
@@ -1,4 +1,15 @@
+//FONTS
 $global_title: 'Raleway', sans-serif;
 $global_content: 'Times New Roman', serif;
 
+//COLOURS
 $the_gold: #ddc086;
+$section_bg: #252525;
+
+//HR
+.section_hr {
+  width: 68px;
+  height: 1px;
+  background-color: $the_gold;
+  margin: 0 auto;
+}
