--- a/myportfolio/css/styles.css
+++ b/myportfolio/css/styles.css
@@ -1,3 +1,9 @@
+.section_hr {
+  width: 68px;
+  height: 1px;
+  background-color: #ddc086;
+  margin: 0 auto; }
+
 .header_bar_container {
   position: fixed;
   width: 100%;
@@ -197,3 +203,51 @@
     font-family: "Times New Roman", serif;
     font-size: 1rem;
     color: #000; }
+
+.offer {
+  text-align: center;
+  background-color: #252525;
+  padding: 80px 10px 10px 10px; }
+  .offer h3 {
+    font-family: "Raleway", sans-serif;
+    font-size: 1.125rem;
+    color: #ddc086;
+    text-transform: uppercase;
+    margin-bottom: 40px; }
+  .offer img {
+    width: 80px; }
+  .offer p {
+    font-family: "Times New Roman", serif;
+    font-size: 1.125rem;
+    color: white;
+    margin: 20px 0 50px 0; }
+
+.dev {
+  text-align: center;
+  background-color: #252525;
+  margin: 30px 0 30px 0;
+  padding: 80px 10px 60px 10px;
+  overflow: hidden; }
+  .dev h3 {
+    font-family: "Raleway", sans-serif;
+    font-size: 1.125rem;
+    color: #ddc086;
+    margin-bottom: 40px; }
+  .dev p {
+    font-family: "Times New Roman", serif;
+    font-size: 1rem;
+    color: white;
+    margin-bottom: 30px; }
+  .dev .dev_icon_grey {
+    height: 120px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    transform: translateX(30%); }
+  .dev h4 {
+    font-family: "Raleway", sans-serif;
+    font-size: 1.125rem;
+    color: white;
+    margin-bottom: 30px; }
+  .dev .language_icons img {
+    width: 60px;
+    margin: 20px 25px 0 25px; }
