--- a/myportfolio/scss/_services.scss
+++ b/myportfolio/scss/_services.scss
@@ -1,61 +1,134 @@
-.services_container {
-
-}
-
 .offer {
-  text-align: center;
-  background-color: $section_bg;
-  padding: 80px 10px 10px 10px;
-  h3 {
-    font-family: $global_title;
-    font-size: 1.125rem;
-    color: $the_gold;
-    text-transform: uppercase;
-    margin-bottom: 40px;
-  }
-  img {
-    width: 80px;
-  }
-  p {
-    font-family: $global_content;
-    font-size: 1.125rem;
-    color: white;
-    margin: 20px 0 50px 0;
-  }
+    text-align: center;
+    background-color: $section_bg;
+    padding: 80px 10px 10px 10px;
+    h3 {
+        font-family: $global_title;
+        font-size: 1.125rem;
+        color: $the_gold;
+        text-transform: uppercase;
+        margin-bottom: 40px;
+    }
+    img {
+        width: 80px;
+    }
+    p {
+        font-family: $global_content;
+        font-size: 1.125rem;
+        color: white;
+        margin: 20px 0 50px 0;
+    }
 }
 
 .dev {
-  text-align: center;
-  background-color: $section_bg;
-  margin: 30px 0 30px 0;
-  padding: 80px 10px 60px 10px;
-  overflow: hidden;
-  h3 {
-    font-family: $global_title;
-    font-size: 1.125rem;
-    color: $the_gold;
-    margin-bottom: 40px;
-  }
-  p {
-    font-family: $global_content;
-    font-size: 1rem;
-    color: white;
-    margin-bottom: 30px;
-  }
-  .dev_icon_grey {
-    height: 120px;
-    margin-top: 60px;
-    margin-bottom: 60px;
-    transform: translateX(30%);
-  }
-  h4 {
-    font-family: $global_title;
-    font-size: 1.125rem;
-    color: white;
-    margin-bottom: 30px;
-  }
-  .language_icons img {
-    width: 60px;
-    margin: 20px 25px 0 25px;
-  }
+    text-align: center;
+    background-color: $section_bg;
+    margin: 30px 0 30px 0;
+    padding: 80px 10px 60px 10px;
+    overflow: hidden;
+    h3 {
+        font-family: $global_title;
+        font-size: 1.125rem;
+        font-weight: 100;
+        color: $the_gold;
+        margin-bottom: 40px;
+    }
+    p {
+        font-family: $global_content;
+        font-size: 1rem;
+        color: white;
+        margin-bottom: 30px;
+    }
+    .dev_icon_grey {
+        height: 120px;
+        margin-top: 60px;
+        margin-bottom: 60px;
+        transform: translateX(30%);
+    }
+    h4 {
+        font-family: $global_title;
+        font-size: 1.125rem;
+        color: white;
+        margin-bottom: 30px;
+    }
+    .language_icons img {
+        width: 60px;
+        margin: 20px 25px 0 25px;
+    }
+}
+
+.photography {
+    text-align: center;
+    background-color: $section_bg;
+    margin: 30px 0 30px 0;
+    padding: 80px 10px 60px 10px;
+    overflow: hidden;
+    h3 {
+        font-family: $global_title;
+        font-size: 1.125rem;
+        font-weight: 100;
+        color: $the_gold;
+        margin-bottom: 40px;
+    }
+    p {
+        font-family: $global_content;
+        font-size: 1rem;
+        color: white;
+        margin-bottom: 30px;
+    }
+    .camera_icon_grey {
+        height: 120px;
+        margin-top: 60px;
+        margin-bottom: 60px;
+        transform: translateX(-30%);
+    }
+    h4 {
+        font-family: $global_title;
+        font-size: 1.125rem;
+        font-weight: 100;
+        color: white;
+        margin-bottom: 30px;
+    }
+    .my_gear img {
+        width: 60px;
+        margin: 0 25px 20px 25px;
+    }
+}
+
+.design {
+    text-align: center;
+    background-color: $section_bg;
+    margin: 30px 0 30px 0;
+    padding: 80px 10px 60px 10px;
+    overflow: hidden;
+    h3 {
+        font-family: $global_title;
+        font-size: 1.125rem;
+        font-weight: 100;
+        color: $the_gold;
+        margin-bottom: 40px;
+    }
+    p {
+        font-family: $global_content;
+        font-size: 1rem;
+        color: white;
+        margin-bottom: 30px;
+    }
+    .design_icon_grey {
+        height: 120px;
+        margin-top: 60px;
+        margin-bottom: 60px;
+        transform: translateX(30%);
+    }
+    h4 {
+        font-family: $global_title;
+        font-size: 1.125rem;
+        font-weight: 100;
+        color: white;
+        margin-bottom: 30px;
+    }
+    .my_tool_kit img {
+        width: 60px;
+        margin: 0 25px 20px 25px;
+    }
 }
