--- a/myportfolio/css/styles.css
+++ b/myportfolio/css/styles.css
@@ -222,33 +222,37 @@
     color: white;
     margin: 20px 0 50px 0; }
 
+.services_container h3 {
+  font-family: "Raleway", sans-serif;
+  font-size: 1.125rem;
+  font-weight: 100;
+  color: #ddc086;
+  margin-bottom: 40px; }
+
+.services_container p {
+  font-family: "Times New Roman", serif;
+  font-size: 1rem;
+  color: white;
+  margin-bottom: 30px; }
+
+.services_container h4 {
+  font-family: "Raleway", sans-serif;
+  font-size: 1.125rem;
+  font-weight: 100;
+  color: white;
+  margin-bottom: 30px; }
+
 .dev {
   text-align: center;
   background-color: #252525;
   margin: 30px 0 30px 0;
   padding: 80px 10px 60px 10px;
   overflow: hidden; }
-  .dev h3 {
-    font-family: "Raleway", sans-serif;
-    font-size: 1.125rem;
-    font-weight: 100;
-    color: #ddc086;
-    margin-bottom: 40px; }
-  .dev p {
-    font-family: "Times New Roman", serif;
-    font-size: 1rem;
-    color: white;
-    margin-bottom: 30px; }
   .dev .dev_icon_grey {
     height: 120px;
     margin-top: 60px;
     margin-bottom: 60px;
     transform: translateX(30%); }
-  .dev h4 {
-    font-family: "Raleway", sans-serif;
-    font-size: 1.125rem;
-    color: white;
-    margin-bottom: 30px; }
   .dev .language_icons img {
     width: 60px;
     margin: 20px 25px 0 25px; }
@@ -259,28 +263,11 @@
   margin: 30px 0 30px 0;
   padding: 80px 10px 60px 10px;
   overflow: hidden; }
-  .photography h3 {
-    font-family: "Raleway", sans-serif;
-    font-size: 1.125rem;
-    font-weight: 100;
-    color: #ddc086;
-    margin-bottom: 40px; }
-  .photography p {
-    font-family: "Times New Roman", serif;
-    font-size: 1rem;
-    color: white;
-    margin-bottom: 30px; }
   .photography .camera_icon_grey {
     height: 120px;
     margin-top: 60px;
     margin-bottom: 60px;
     transform: translateX(-30%); }
-  .photography h4 {
-    font-family: "Raleway", sans-serif;
-    font-size: 1.125rem;
-    font-weight: 100;
-    color: white;
-    margin-bottom: 30px; }
   .photography .my_gear img {
     width: 60px;
     margin: 0 25px 20px 25px; }
@@ -291,28 +278,11 @@
   margin: 30px 0 30px 0;
   padding: 80px 10px 60px 10px;
   overflow: hidden; }
-  .design h3 {
-    font-family: "Raleway", sans-serif;
-    font-size: 1.125rem;
-    font-weight: 100;
-    color: #ddc086;
-    margin-bottom: 40px; }
-  .design p {
-    font-family: "Times New Roman", serif;
-    font-size: 1rem;
-    color: white;
-    margin-bottom: 30px; }
   .design .design_icon_grey {
     height: 120px;
     margin-top: 60px;
     margin-bottom: 60px;
     transform: translateX(30%); }
-  .design h4 {
-    font-family: "Raleway", sans-serif;
-    font-size: 1.125rem;
-    font-weight: 100;
-    color: white;
-    margin-bottom: 30px; }
   .design .my_tool_kit img {
     width: 60px;
     margin: 0 25px 20px 25px; }
