--- a/myportfolio/scss/_variables.scss
+++ b/myportfolio/scss/_variables.scss
@@ -13,3 +13,12 @@ $section_bg: #252525;
     background-color: $the_gold;
     margin: 0 auto;
 }
+
+//SECTION
+@mixin services_section {
+    text-align: center;
+    background-color: $section_bg;
+    margin: 30px 0 30px 0;
+    padding: 80px 10px 60px 10px;
+    overflow: hidden;
+}
