--- a/myportfolio/css/styles.css
+++ b/myportfolio/css/styles.css
@@ -312,3 +312,63 @@
       border-top: solid 1px #ccc; }
     .portfolio_container .portfolio_wrap:last-child {
       border-top: solid 1px #ccc; }
+
+.contact_form_container {
+  padding: 80px 10px 60px 10px;
+  background: #252525; }
+  .contact_form_container h3 {
+    font-family: "Raleway", sans-serif;
+    font-size: 1.125rem;
+    color: #ddc086;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    text-align: center; }
+  .contact_form_container label {
+    font-family: "Times New Roman", serif;
+    font-size: 1rem;
+    color: white; }
+  .contact_form_container input {
+    background: #252525;
+    font-family: "Times New Roman", serif;
+    color: white;
+    border-top: none;
+    border-right: none;
+    border-bottom: 3px solid white;
+    border-left: none; }
+    .contact_form_container input:focus {
+      background: #252525;
+      font-family: "Times New Roman", serif;
+      color: white;
+      border-top: none;
+      border-right: none;
+      border-bottom: 3px solid white;
+      border-left: none;
+      box-shadow: none; }
+  .contact_form_container button {
+    font-family: "Raleway", sans-serif;
+    font-size: 1.125rem;
+    color: #ddc086;
+    text-transform: uppercase;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: all .3s ease;
+    cursor: pointer; }
+    .contact_form_container button:hover, .contact_form_container button:focus {
+      border-top: none;
+      border-right: none;
+      border-bottom: 3px solid white;
+      border-left: none;
+      padding: 0 6px 3px 6px; }
+
+.form_element {
+  position: relative;
+  margin-bottom: 50px; }
+
+.form_label {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all .3s ease; }
+  .form_label.active {
+    margin-top: -30px; }
