--- a/myportfolio/css/styles.css
+++ b/myportfolio/css/styles.css
@@ -312,3 +312,28 @@
       border-top: solid 1px #ccc; }
     .portfolio_container .portfolio_wrap:last-child {
       border-top: solid 1px #ccc; }
+
+.main_footer {
+  background: black;
+  padding: 80px 10px 60px 10px; }
+
+.footer_logo_wrap {
+  text-align: center;
+  margin-bottom: 50px; }
+  .footer_logo_wrap img {
+    width: 20%; }
+
+.social_media {
+  text-align: center;
+  margin-bottom: 50px; }
+  .social_media img {
+    width: 12%;
+    margin: 0 5px 0 5px; }
+
+.copyright {
+  text-align: center; }
+  .copyright p {
+    font-family: "Raleway", sans-serif;
+    font-size: 1rem;
+    color: #ddc086;
+    text-transform: uppercase; }
