--- a/myportfolio/scss/styles.scss
+++ b/myportfolio/scss/styles.scss
@@ -2,6 +2,7 @@
 @import "header";
 @import "about";
 @import "services";
+@import "portfolio";
 @import "strength";
 @import "contact_form";
 @import "footer";
