--- a/myportfolio/scss/_footer.scss
+++ b/myportfolio/scss/_footer.scss
@@ -25,7 +25,7 @@
   p {
     font-family: $global_title;
     font-size: 1rem;
-    color: $the_gold;
+    color: white;
     text-transform: uppercase;
   }
 }
