--- a/myportfolio/scss/_about.scss
+++ b/myportfolio/scss/_about.scss
@@ -1,22 +1,28 @@
 .about_container {
+  margin: 0;
+  padding: 80px 10px 80px 10px;
+  @media screen and (min-width: 40rem) {
+    padding: 120px 10px 120px 10px;
+  }
+  section {
     margin: 0;
-    padding: 80px 10px 60px 10px;
-    section {
-        margin: 0;
-        text-align: left;
+    text-align: left;
+  }
+  .about_title {
+    padding-bottom: 60px;
+    h3 {
+      font-family: $global_title;
+      font-size: 1.125rem;
+      font-weight: 700;
+      color: black;
     }
-    .about_title {
-        padding-bottom: 60px;
-        h3 {
-            font-family: $global_title;
-            font-size: 1.125rem;
-            font-weight: 700;
-            color: #000000;
-        }
+  }
+  .about_text p {
+    font-family: $global_content;
+    font-size: 1rem;
+    color: black;
+    @media screen and (min-width: 40rem) {
+      margin: 0;
     }
-    .about_text p {
-        font-family: $global_content;
-        font-size: 1rem;
-        color: #000000;
-    }
+  }
 }
