--- a/myportfolio/scss/_contact_form.scss
+++ b/myportfolio/scss/_contact_form.scss
@@ -8,6 +8,9 @@
     text-transform: uppercase;
     margin-bottom: 30px;
     text-align: center;
+    @media screen and (min-width: 40rem) {
+      font-size: 1.5rem;
+    }
   }
   label {
     font-family: $global_content;
@@ -33,7 +36,7 @@
       box-shadow: none;
     }
   }
-  button{
+  button {
     font-family: $global_title;
     font-size: 1.125rem;
     color: white;
@@ -44,8 +47,11 @@
     transition: all .3s ease;
     cursor: pointer;
     &:hover,
-    &:focus{
+    &:focus {
       color: $the_gold;
+    }
+    @media screen and (min-width: 40rem) {
+      font-size: 1.5rem;
     }
   }
 }
