--- a/myportfolio/scss/_footer.scss
+++ b/myportfolio/scss/_footer.scss
@@ -7,7 +7,7 @@
   text-align: center;
   margin-bottom: 50px;
   img {
-    width: 20%;
+    width: 70px;
   }
 }
 
@@ -15,7 +15,7 @@
   text-align: center;
   margin-bottom: 50px;
   img {
-    width: 12%;
+    width: 36px;
     margin: 0 5px 0 5px;
   }
 }
