--- a/myportfolio/scss/_portfolio.scss
+++ b/myportfolio/scss/_portfolio.scss
@@ -1,5 +1,4 @@
 .portfolio_container {
-  padding-top: 80px;
   text-align: center;
   .portfolio_description {
     padding: 0 10px 0 10px;
@@ -9,6 +8,9 @@
       color: black;
       text-transform: uppercase;
       margin-bottom: 30px;
+      @media screen and (min-width: 40rem) {
+        font-size: 1.5rem;
+      }
     }
     p {
       font-family: $global_content;
@@ -19,14 +21,8 @@
     }
   }
   .portfolio_wrap {
-    width: 100%;
-    padding-top: 100%;
+    height: 200px;
     background-color: $section_bg;
-    &:nth-child(3) {
-      border-top: solid 1px #ccc;
-    }
-    &:last-child {
-      border-top: solid 1px #ccc;
-    }
+    border: 1px solid #ccc;
   }
 }
