--- a/myportfolio/scss/_services.scss
+++ b/myportfolio/scss/_services.scss
@@ -1,13 +1,19 @@
 .offer {
   text-align: center;
   background-color: $section_bg;
-  padding: 80px 10px 10px 10px;
+  padding: 80px 10px 60px 10px;
+  @media screen and (min-width: 40rem) {
+    padding: 120px 10px 120px 10px;
+  }
   h3 {
     font-family: $global_title;
     font-size: 1.125rem;
     color: $the_gold;
     text-transform: uppercase;
     margin-bottom: 40px;
+    @media screen and (min-width: 40rem) {
+      font-size: 1.5rem;
+    }
   }
   img {
     width: 80px;
@@ -16,7 +22,7 @@
     font-family: $global_content;
     font-size: 1.125rem;
     color: white;
-    margin: 20px 0 50px 0;
+    margin: 10px 0 30px 0;
   }
 }
 
@@ -26,6 +32,9 @@
     font-size: 1.125rem;
     color: $the_gold;
     margin-bottom: 40px;
+    @media screen and (min-width: 40rem) {
+      font-size: 1.5rem;
+    }
   }
   p {
     font-family: $global_content;
@@ -43,11 +52,16 @@
 
 .dev {
   @include services_section;
+  .icon_wrap {
+    padding: 60px 0 60px 0;
+  }
   .dev_icon_grey {
     height: 120px;
-    margin-top: 60px;
-    margin-bottom: 60px;
     transform: translateX(30%);
+  }
+  .macbook {
+    max-width: 420px;
+    max-height: 100%;
   }
   .language_icons img {
     width: 60px;
@@ -63,6 +77,10 @@
     margin-bottom: 60px;
     transform: translateX(-30%);
   }
+  .camera {
+    max-width: 420px;
+    max-height: 100%;
+  }
   .my_gear img {
     width: 60px;
     margin: 0 25px 20px 25px;
@@ -76,6 +94,10 @@
     margin-top: 60px;
     margin-bottom: 60px;
     transform: translateX(30%);
+  }
+  .name_card {
+    max-width: 520px;
+    max-height: 100%;
   }
   .my_tool_kit img {
     width: 60px;
