--- a/myportfolio/scss/styles.scss
+++ b/myportfolio/scss/styles.scss
@@ -6,3 +6,9 @@
 @import "strength";
 @import "contact_form";
 @import "footer";
+
+//* {
+//  background: #000 !important;
+//  color: #0f0 !important;
+//  outline: solid #f00 1px !important;
+//}
