--- a/myportfolio/scss/_about.scss
+++ b/myportfolio/scss/_about.scss
@@ -16,6 +16,9 @@
       font-weight: 700;
       color: black;
     }
+    .section_hr {
+      margin: 30px 0 0 0;
+    }
   }
   .about_text p {
     font-family: $global_content;
