--- a/myportfolio/scss/_header.scss
+++ b/myportfolio/scss/_header.scss
@@ -195,6 +195,9 @@
     @media screen and (min-width: 40rem) {
       font-size: 3rem;
     }
+    @media screen and (min-width: 90rem) {
+      font-size: 3.5rem;
+    }
   }
 }
 
