--- a/myportfolio/scss/_portfolio.scss
+++ b/myportfolio/scss/_portfolio.scss
@@ -11,6 +11,9 @@
       @media screen and (min-width: 40rem) {
         font-size: 1.5rem;
       }
+      @media screen and (min-width: 64rem) {
+        font-size: 2rem;
+      }
     }
     p {
       font-family: $global_content;
