--- a/myportfolio/scss/_strength.scss
+++ b/myportfolio/scss/_strength.scss
@@ -10,6 +10,9 @@
     @media screen and (min-width: 40rem) {
       font-size: 1.5rem;
     }
+    @media screen and (min-width: 64rem) {
+      font-size: 2rem;
+    }
   }
   p {
     font-family: $global_content;
