--- a/myportfolio/scss/_portfolio.scss
+++ b/myportfolio/scss/_portfolio.scss
@@ -1,5 +1,6 @@
 .portfolio_container {
   text-align: center;
+  margin-top: 60px;
   .portfolio_description {
     padding: 0 10px 0 10px;
     h2 {
