--- a/myportfolio/scss/_services.scss
+++ b/myportfolio/scss/_services.scss
@@ -97,6 +97,10 @@
         max-width: 160%;
         max-height: 160%;
       }
+      .dev_icon_grey {
+        height: 120px;
+        transform: translateX(100%);
+      }
     }
     .language_icons img {
       width: 60px;
@@ -112,7 +116,7 @@
     height: 120px;
     margin-top: 60px;
     margin-bottom: 60px;
-    transform: translateX(45%);
+    transform: translateX(-45%);
   }
   .name_card {
     max-width: 520px;
@@ -142,7 +146,7 @@
       position: relative;
       .name_card {
         position: absolute;
-        top: -300px;
+        top: -280px;
         right: -350px;
         max-width: 180%;
         max-height: 180%;
@@ -165,7 +169,7 @@
     height: 120px;
     margin-top: 60px;
     margin-bottom: 60px;
-    transform: translateX(-45%);
+    transform: translateX(45%);
   }
   .camera {
     max-width: 420px;
@@ -176,7 +180,7 @@
     margin: 0 25px 20px 25px;
   }
   @media screen and (min-width: 64rem) {
-    margin: 0 0 120px 0;
+    margin: 60px 0 0 0;
     overflow: visible;
     h3 {
       text-align: left;
@@ -202,7 +206,7 @@
         max-height: 250%;
       }
       .camera_icon_grey{
-        transform: translateX(50%);
+        transform: translateX(100%);
       }
     }
     .my_gear img {
