--- a/myportfolio/scss/_variables.scss
+++ b/myportfolio/scss/_variables.scss
@@ -18,7 +18,7 @@ $section_bg: #252525;
 @mixin services_section {
   text-align: center;
   background-color: $section_bg;
-  margin: 60px 0 60px 0;
+  margin: 60px 0 0 0;
   padding: 80px 10px 80px 10px;
   overflow: hidden;
 }
